--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,11 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+.angular
+.dist
+.vscode
+
+/src/app/inertia
+/src/app/nav-link
+/src/app/parallax-bg
